--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,9 @@
 .App {
   text-align: center;
+  margin-top: 20%;
+  width: 100%;
+  height: 100%;
+  color: white;
 }
 
 .App-logo {
@@ -7,7 +11,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+
   min-height: 100vh;
   display: flex;
   flex-direction: column;
