--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,9 +1,15 @@
 .App {
   text-align: center;
-  margin-top: 20%;
-  width: 100%;
-  height: 100%;
+  justify-content: center;
+  flex-direction: column;
+  display: flex;
+  background-color: #282c34;
+  min-height: 100vh;
   color: white;
+}
+
+h2 {
+  margin-top: 0;
 }
 
 .App-logo {
