--- a/client/src/App.css
+++ b/client/src/App.css
@@ -27,3 +27,32 @@ h2 {
 .App-link {
     color: #09d3ac;
 }
+
+.react-cookie-banner {
+    background-color: rgba(60, 60, 60, 0.8);
+    min-height: 65px;
+    vertical-align: center;
+    align-items: center;
+    overflow: scroll;
+    padding: 5px 10px 5px 100px;
+}
+
+.cookie-message {
+    display: inline-block;
+}
+
+.button-close {
+    line-height: 24px;
+    margin-top: -12px;
+    margin-left: 100px;
+    padding: 0 8px;
+    background-color: rgba(255, 255, 255, 0.6);
+    border: none;
+    border-radius: 3px;
+    box-shadow: none;
+    font-size: 12px;
+    font-weight: 500;
+    color: rgb(36, 36, 36);
+    cursor: pointer;
+
+}
